feat(Session): update session status enum, update scheduler add new update method to service with status change, update controllers